--- a/item/pyproject.toml
+++ b/item/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "asyncpg>=0.30.0",
     "fastapi[standard]",
     "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.7.1",
     "sqlmodel",
 ]
