add create rooms qrcodes

--- a/user/.env
+++ b/user/.env
@@ -2,3 +2,15 @@ DATABASE_URL=postgresql+asyncpg://kenmoh:V9ZFjDL4PktG@ep-calm-night-19028536-poo
 JWT_SECRET_KEY=iL2OMxUMoke3tHCxXzj0Av0yQcB6-uPc4diFdtg9o3OrclGCR5vbJjNFWALDeVaOr4YBu47IAGqVVKBJvQlWeg
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# ROLE
+SUPER_ADMIN=super_admin 
+HOTEL_OWNER=hotel_owner
+MANAGER=manager
+CHEF=chef
+WAITER=waiter
+GUEST=guest
+LAUNDRY_ATTENDANT=laundry_attendant
+
+# ENCRYPTION KEY
+ENCRYPTION_KEY='W5Nk75IaM5L25Xtda7ZUD_g5Ht3PNFdjjg9X_ZRrqWY='
