--- a/user/.env
+++ b/user/.env
@@ -14,3 +14,7 @@ LAUNDRY_ATTENDANT=laundry_attendant
 
 # ENCRYPTION KEY
 ENCRYPTION_KEY='W5Nk75IaM5L25Xtda7ZUD_g5Ht3PNFdjjg9X_ZRrqWY='
+
+# BEANIE
+USERNAME=kenmoh
+PASSWORD=@areneth
