--- a/user/pyproject.toml
+++ b/user/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "alembic>=1.14.0",
     "asyncpg>=0.30.0",
+    "beanie>=1.29.0",
     "cryptography>=44.0.0",
     "fastapi[standard]>=0.115.6",
     "passlib>=1.7.4",
