--- a/user/pyproject.toml
+++ b/user/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "python-jose>=3.3.0",
     "qrcode>=8.0",
+    "requests>=2.32.3",
     "slowapi>=0.1.9",
     "sqlmodel>=0.0.22",
 ]
