--- a/user/.env
+++ b/user/.env
@@ -18,3 +18,8 @@ ENCRYPTION_KEY='W5Nk75IaM5L25Xtda7ZUD_g5Ht3PNFdjjg9X_ZRrqWY='
 # BEANIE
 USERNAME=kenmoh
 PASSWORD=@areneth
+
+# AWS
+AWS_REGION_NAME= us-east-1
+AWS_COGNITO_APP_CLIENT_ID= 1d0erte7gsi424oqq5v6buo07i
+AWS_COGNITO_USER_POOL_ID= us-east-1_dk5uWF32W
