--- a/user/pyproject.toml
+++ b/user/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.14.0",
     "asyncpg>=0.30.0",
     "beanie>=1.29.0",
+    "boto3>=1.36.0",
     "cryptography>=44.0.0",
     "fastapi[standard]>=0.115.6",
     "passlib>=1.7.4",
