--- a/item/pyproject.toml
+++ b/item/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "alembic>=1.14.0",
     "asyncpg>=0.30.0",
+    "beanie>=1.29.0",
     "fastapi[standard]",
     "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.7.1",
