add split functionality

--- a/user/.env
+++ b/user/.env
@@ -12,7 +12,7 @@ WAITER=waiter
 GUEST=guest
 LAUNDRY_ATTENDANT=laundry_attendant
 
-# ENCRYPTION KEY
+# FERNET ENCRYPTION KEY
 ENCRYPTION_KEY='W5Nk75IaM5L25Xtda7ZUD_g5Ht3PNFdjjg9X_ZRrqWY='
 
 # BEANIE
@@ -23,3 +23,11 @@ PASSWORD=@areneth
 AWS_REGION_NAME= us-east-1
 AWS_COGNITO_APP_CLIENT_ID= 1d0erte7gsi424oqq5v6buo07i
 AWS_COGNITO_USER_POOL_ID= us-east-1_dk5uWF32W
+
+# FLUTTERWAVE
+FLW_PUBLIC_KEY=FLWPUBK_TEST-3bbc2bea329e34ed862563f6f2e6f258-X
+FLW_SECRET_KEY=FLWSECK_TEST-c6b2da30759d239fbdeb2436c6b2fe74-X
+
+# PAYSTACK
+PSK_SECRET=sk_test_b86956dde1fc09a0026a5c5f425c28c04836e428
+PSK_PUBLIC=pk_test_b81ce384a8ad4ee571032ea294f0f3240d0cf31a
